--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,7 @@
+.nav {
+    background: linear-gradient(180deg, rgba(254,243,228,1) 0%, rgba(255,248,239,0) 100%);
+}
+
 .logo {
     max-width: 100px;
 }
