--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -1,3 +1,42 @@
 .hero {
     background: #fff8ef !important;
 }
+
+.features {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.features > li {
+    border: 1px solid var(--bs-navy);
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+}
+
+.features > li > svg {
+    width: 2rem;
+    height: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+    .features {
+        justify-content: space-between;
+    }
+
+    .hero p {
+        text-align: justify;
+        padding-right: 0!important;
+    }
+
+    .hero a {
+        display: block;
+    }
+
+    
+}
+    
