--- a/src/components/Main/Hero/Hero.module.css
+++ b/src/components/Main/Hero/Hero.module.css
@@ -1,5 +1,5 @@
 .hero {
-    background: #fff8ef !important;
+    background: linear-gradient(180deg,#fffaf2,rgba(255,255,255,0) 100%);
 }
 
 .features {
